--- a/profilecard.css
+++ b/profilecard.css
@@ -39,7 +39,7 @@ img{
 td{
     height:10%;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    color:brown;
+    color:dark blue;
     padding:2px;
 }
 a{
